Fix for flat table popovers, added horizontal scrolling

--- a/app/assets/stylesheets/patient_dashboard.less
+++ b/app/assets/stylesheets/patient_dashboard.less
@@ -53,6 +53,10 @@ html, body, .container-fluid, [role="main"], .measure-layout, .patient-dashboard
   overflow-x: hidden;
 }
 
+.dataTables_wrapper {
+  overflow-x: auto;
+}
+
 .DTFC_ScrollWrapper,
 .dataTables_scroll,
 .dataTables_scrollHead,
